tests/ui/track-diagnostics/track.stderr
error[E0425]: cannot find value `crablang` in this scope
  --> $DIR/track.rs:LL:CC
   |
LL |     break crablang
   |           ^^^^ not found in this scope
-Ztrack-diagnostics: created at compiler/crablangc_resolve/src/late/diagnostics.rs:LL:CC

error[E0268]: `break` outside of a loop or labeled block
  --> $DIR/track.rs:LL:CC
   |
LL |     break crablang
   |     ^^^^^^^^^^ cannot `break` outside of a loop or labeled block
-Ztrack-diagnostics: created at compiler/crablangc_passes/src/loops.rs:LL:CC

error: internal compiler error: It looks like you're trying to break crablang; would you like some ICE?

note: the compiler expectedly panicked. this is a feature.

note: we would appreciate a joke overview: https://github.com/crablang/crablang/issues/43162#issuecomment-320764675

note: crablangc $VERSION running on $TARGET

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0268, E0425.
For more information about an error, try `crablangc --explain E0268`.
